# client-server-4-students

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  main.py  oss_bundle.md  pyproject.toml  requirements-dev.txt  requirements.txt  scratch_extract.py
.agents/skills/cs4s-code-documentation/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.skills/mintpy-design-system/: SKILL.md
config/: settings.json
docs/: DESIGN_SYSTEM.md  MANUAL_DE_USUARIO.md  USER_MANUAL.md
docs/en/: DEVELOPER_GUIDE.md  EDUCATOR_GUIDE.md  PROTOCOL_SPECIFICATION.md
docs/es/: ESPECIFICACION_DEL_PROTOCOLO.md  GUIA_DEL_DESARROLLADOR.md  GUIA_DEL_EDUCADOR.md
scripts/: build_dist.py
src/: __init__.py
src/core/: __init__.py  config.py  logger.py  protocol.py  runtime.py
src/localization/: __init__.py  en.json  es.json  locale_manager.py
src/network/: __init__.py  client_backend.py  errors.py  security.py  server_backend.py  transfer_state.py
src/storage/: __init__.py  auth.py  file_manager.py
src/ui/: __init__.py  client_window.py  launcher.py  server_window.py
tests/: conftest.py
tests/gui/: test_client.py  test_localization_keys.py  test_mintpy_atoms.py  test_server.py
tests/integration/: test_protocol.py  test_regression.py
tests/unit/: test_auth.py  test_dispatcher.py  test_file_mgr.py  test_icons.py  test_locale.py  test_runtime.py  test_security.py
(+30 files in other folders)
