[tool.poetry]
name = "cs4s"
version = "2.0.0"
description = "Client-Server 4 Students: Educational networking laboratory"
authors = ["HoujouSxnnyside <houjou.sxnnyside@sxnnysideproject.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.16"
PyQt6 = ">=6.6.0"
bcrypt = ">=4.1.0"
python-i18n = ">=0.3.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-qt = ">=4.4.0"
pytest-mock = ">=3.12.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pyinstaller = ">=6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["src.ui.*", "tests.*"]
ignore_errors = true
